--- a/configs/abc.properties
+++ b/configs/abc.properties
@@ -1,5 +1,7 @@
--- abc mikrosu mikro bazl? sorgulama yapt???nda config server abc.prop ve application.prop a bakar.
--- xyz mikroservis application.prop e bakar.
--- Her zaman configurasyon server daki lokaldekini ezer. öncelikli olan mikro.prop oland?r.
-
+# abc mikrosu mikro bazl? sorgulama yapt???nda config server abc.prop ve application.prop a bakar.
+# xyz mikroservis application.prop e bakar.
+# Her zaman configurasyon server daki lokaldekini ezer. öncelikli olan mikro.prop oland?r.
+# xyz için application.prop
+# abc için 2 tane abc.prop ve application.prop
+# abc/dev için 3 tane abc-dev, abc prop ve applicaiton prop
 app.text = abc training
